force-app/main/default/objects/RateAdjustmentByCreditScore__c/RateAdjustmentByCreditScore__c.object-meta.xml
<CustomObject>
    <label>Rate Adjustment By Credit Score</label>
    <nameField>
        <displayFormat>Record-{000}</displayFormat>
        <label>Rate Adjustment By Credit Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Adjustments By Credit Score</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>