force-app/main/default/objects/RateAdjustmentByCreditScore__c/fields/LowerBound__c.field-meta.xml
<CustomField>
    <fullName>LowerBound__c</fullName>
    <label>Lower Bound</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>