force-app/main/default/objects/RateAdjustmentByCreditScore__c/fields/TierValue__c.field-meta.xml
<CustomField>
    <fullName>TierValue__c</fullName>
    <label>Tier Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>